fixed backspace image error

--- a/calculator.html
+++ b/calculator.html
@@ -30,7 +30,7 @@
                     <div class="input-buttons" id="8" onclick="inputInt(8)"> 8 </div>
                     <div class="input-buttons" id="9" onclick="inputInt(9)"> 9 </div>
                     <div id="del" class="input-buttons" onclick="deleteLast()">
-                        <img src="glyphicons/delete-icon.jpg"> 
+                        <img src="glyphicons/delete-icon.JPG"> 
                     </div>
                 </div>
                 <div id="row-2" class="calc-content-rows">
